--- a/exo1.yml
+++ b/exo1.yml
@@ -2,13 +2,14 @@ openapi: 3.0.0
 info:
   title: API Ping
   version: 1.0.0
+servers:
+  - url: http://localhost:8000
 paths:
   /ping:
     get:
-      summary: Vérifie la disponibilité
       responses:
         '200':
-          description: Réponse réussie
+          description: pong
           content:
             text/plain:
               schema:
